--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -331,6 +331,12 @@
 		color: @clrButtonText;
 		cursor: default;
 	}
+
+	&:active {
+		background: @clrButtonBgActive;
+		border: 1px solid @clrButtonBorderActive;
+		color: @clrButtonTextActive;
+	}
 }
 
 //------------------------------------------------------------
