Arc-Dark: tweak toast colors

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -56,11 +56,6 @@
 @clrToolBtnText:rgba(207, 218, 231, 0.8);
 @clrToolBtnTextActive: #ffffff;
 
-@clrToastBg: darken(@clrWindowBg, 2%);
-@clrToastBorder: @clrWindowBorder;
-@clrToastText: @clrText;
-@clrToastTextActive: @clrTextActive;
-
 //---------------------------------
 // Lists / Threadlist
 //---------------------------------
@@ -144,6 +139,11 @@
 @clrPopoverTextFaded: fade(@clrPopoverText, 60%);
 @clrPopoverTextActive: #ffffff;
 @clrPopoverTextActiveFaded: fade(@clrPopoverTextActive, 60%);
+
+@clrToastBg: #353945;
+@clrToastBorder: #1f2128;
+@clrToastText: @clrText;
+@clrToastTextActive: @clrTextActive;
 
 //------------------------------------------------------------
 // LESS mixins
