Arc-Dark: tweak search box clear buttons color

--- a/Arc-Dark/styles/threadlist-toolbar.less
+++ b/Arc-Dark/styles/threadlist-toolbar.less
@@ -58,7 +58,7 @@
 		padding-top: 15px;
 
 		&.clear {
-			.arc-threadlist-icon(url(../static/images/search/searchclear@2x.png), 21px, @clrTextFaded);
+			.arc-threadlist-icon(url(../static/images/search/searchclear@2x.png), 21px, @clrTextFadedLess);
 
 			&:hover {
 				background-color: @clrText;
