--- a/Arc-Dark/styles/threadlist-toolbar.less
+++ b/Arc-Dark/styles/threadlist-toolbar.less
@@ -100,6 +100,11 @@
 			background-color: @clrWindowBg;
 			border-color: @clrWindowBorder;
 			color: @clrTextFadedLess;
+
+			a {
+				color: @clrLink;
+				cursor: pointer;
+			}
 		}
 	}
 }
