Arc-Dark: tweak toast border radius

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -254,6 +254,7 @@ select {
 	.content {
 		background: @clrToastBg;
 		border: 1px solid @clrToastBorder;
+		border-radius: 2px;
 		opacity: 0.95;
 	}
 
