Arc-Dark: subscription preferences refresh icon hover color

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -317,6 +317,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 
 		&:hover {
 			cursor: pointer;
+			background-color: @clrAccent; 
 		}
 	}
 }
