Arc-Dark: draft list empty state icon/text

--- a/Arc-Dark/styles/draftlist.less
+++ b/Arc-Dark/styles/draftlist.less
@@ -12,6 +12,14 @@
 	.draft-list {
 		border-top: 1px solid @clrWindowBorder;
 	}
+
+	.empty-state .perspective-empty-state .message {
+		color: @clrTextFaded;
+	}
+
+	.empty-state .perspective-empty-state img {
+		background-color: @clrTextFadedLess;
+	}	
 }
 
 //------------------------------------------------------------
