Arc-Dark: tweak thread list toolbar searchbar width

--- a/Arc-Dark/styles/threadlist-toolbar.less
+++ b/Arc-Dark/styles/threadlist-toolbar.less
@@ -16,7 +16,7 @@
 	background: rgba(0, 0, 0, 0);
 	box-shadow: none;
 	padding-left: 9px;
-	width: 1000px;
+	width: 100%;
 
 	//---------------------------------
 	// Search box text
