--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -268,6 +268,7 @@
 	font-weight: 500;
 
 	.mail-label {
+		margin-right: 6px;
 		box-shadow: none !important;
 		background: @clrAccent !important;
 		color: @clrListTextActive !important;
