Arc-Dark: fix gmail label selected color

--- a/Arc-Dark/styles/threadlist-icons.less
+++ b/Arc-Dark/styles/threadlist-icons.less
@@ -277,7 +277,8 @@
 
 .thread-list .focused .mail-label,
 .draft-list .focused .mail-label,
-.thread-list.handler-split .list-item.selected .mail-label {
+.thread-list.handler-split .list-item.selected .mail-label,
+.thread-list .list-tabular .list-tabular-item.selected .mail-label {
 	box-shadow: none !important;
 	background-color: @clrListTextActive !important;
 	color: @clrAccent !important;
