Arc-Dark: tweak selected thread unread item font weight

--- a/Arc-Dark/styles/threadlist.less
+++ b/Arc-Dark/styles/threadlist.less
@@ -69,7 +69,7 @@
 		}
 	}
 
-	&.handler-split .list-item.selected {
+	&.handler-split .list-item.selected.unread {
 		.participants span,
 		.subject {
 			font-weight: bold !important;
