Arc-Drak: disabled toolbar button

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -55,6 +55,7 @@
 @clrToolBtnBorderActive: @clrAccent;
 @clrToolBtnText:rgba(207, 218, 231, 0.8);
 @clrToolBtnTextActive: #ffffff;
+@clrToolBtnTextDisabled: rgba(207, 218, 231, 0.35);
 
 //---------------------------------
 // Lists / Threadlist
