--- a/Arc-Dark/styles/messagelist-toolbar.less
+++ b/Arc-Dark/styles/messagelist-toolbar.less
@@ -49,6 +49,16 @@
 			}
 		}
 
+		&.disabled {
+			opacity: 1;
+			border-color: transparent !important;
+			background-color: transparent;
+
+			img.content-mask {
+				background-color: @clrToolBtnTextDisabled;
+			}
+		}
+
 		//---------------------------------
 		// Inactive window toolbar buttons
 		//---------------------------------
