Arc-Dark: tweak preferences appearance slider midpoint color

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -317,7 +317,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 
 		&:hover {
 			cursor: pointer;
-			background-color: @clrAccent; 
+			background-color: @clrAccent;
 		}
 	}
 }
@@ -362,7 +362,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 
 		.ruler {
 			.midpoint {
-				border-right: 1px solid @clrPrefsTextFadedMore;
+				border-right: 1px solid @clrPrefsTextFaded;
 			}
 
 			img {
