Arc-Dark: tweak preferences mail rules page

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -458,6 +458,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	.empty-list {
 		background-color: @clrListBg;
 		border: 1px solid @clrWindowBorder;
+		border-radius: 3px;
 
 		h2 {
 			color: @clrPrefsTextFaded;
