Arc-Dark: tweak preferences tab bar

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -58,12 +58,11 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 
 	.preferences-tabs {
 		background-color: @clrPrefsWindowBg;
-		padding-top: 10px;
 
 		.item {
 			box-shadow: none;
 			border: 1px solid transparent;
-			border-radius: 0px;
+			border-radius: 1px 1px 0 0;
 			margin: 0px -1px -1px 0px;
 			padding-top: 0px;
 
@@ -88,7 +87,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 				background: @clrPrefsTabActive;
 				border-color: @clrWindowBorder;
 				border-bottom-color: @clrPrefsTabActive;
-				border-radius: 0px;
+				border-radius: 1px 1px 0 0;
 
 				.name {
 					color: @clrPrefsText;
