Arc-Dark: theme selector tweaks

--- a/Arc-Dark/styles/theme-selector.less
+++ b/Arc-Dark/styles/theme-selector.less
@@ -6,6 +6,9 @@
 .modal-container .modal {
 	background: @clrWindowBg !important;
 	border: 1px solid @clrWindowBorder;
+	border-radius: 3px !important;
+	width: 369px !important;
+	height: 420px !important;
 
 	.modal-close {
 		width: 16px !important;
@@ -31,10 +34,12 @@
 .theme-picker {
 	h4 {
 		color: @clrText !important;
+		font-size: 1.2em;
 	}
 
 	h4 + div {
 		color: @clrText !important;
+		font-size: 1em !important;
 	}
 
 	.create-theme {
