--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -261,12 +261,39 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 
 		.scrollbar-track {
 			background: @clrListBg;
-			border-left: none;
-			width: 10px;
+			border-left: 1px solid transparent;
+			border-right: none;
+			width: 7px;
+			padding: 1px;
 
 			.scrollbar-handle {
-				background: @clrListScrollbar;
+				background: @clrScrollbarOverlay;
 				border: none;
+				border-radius: 4px;
+			}
+
+			&:hover,
+			&.dragging {
+				border-color: @clrWindowBorder;
+				width: 13px;
+				padding: 3px;
+
+			}
+
+			&:hover:not(.dragging) {
+				.scrollbar-handle {
+					background: @clrScrollbar;
+
+					&:hover {
+						background: @clrScrollbarHover;
+					}
+				}
+			}
+
+			&.dragging {
+				.scrollbar-handle {
+					background: @clrScrollbarActive;
+				}
 			}
 		}
 	}
@@ -725,11 +752,38 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 //------------------------------------------------------------
 .column-Preferences .scrollbar-track {
 	background: @clrPrefsBodyBg;
-	border-left: none;
-	width: 10px;
+	border-left: 1px solid transparent;
+	border-right: none;
+	width: 7px;
+	padding: 1px;
 
 	.scrollbar-handle {
-		background: @clrPrefsScrollbar;
+		background: @clrScrollbarOverlay;
 		border: none;
+		border-radius: 4px;
+	}
+
+	&:hover,
+	&.dragging {
+		border-color: @clrWindowBorder;
+		width: 13px;
+		padding: 3px;
+
+	}
+
+	&:hover:not(.dragging) {
+		.scrollbar-handle {
+			background: @clrScrollbar;
+
+			&:hover {
+				background: @clrScrollbarHover;
+			}
+		}
+	}
+
+	&.dragging {
+		.scrollbar-handle {
+			background: @clrScrollbarActive;
+		}
 	}
 }
