--- a/Arc-Dark/styles/activity.less
+++ b/Arc-Dark/styles/activity.less
@@ -104,11 +104,38 @@
 //------------------------------------------------------------
 .activity-dashboard .scrollbar-track {
 	background: @clrDashboardBg;
-	border-left: none;
-	width: 10px;
+	border-left: 1px solid transparent;
+	border-right: none;
+	width: 7px;
+	padding: 1px;
 
 	.scrollbar-handle {
-		background: @clrDashboardScrollbar;
+		background: @clrScrollbarOverlay;
 		border: none;
+		border-radius: 4px;
+	}
+
+	&:hover,
+	&.dragging {
+		border-color: @clrWindowBorder;
+		width: 13px;
+		padding: 3px;
+
+	}
+
+	&:hover:not(.dragging) {
+		.scrollbar-handle {
+			background: @clrScrollbar;
+
+			&:hover {
+				background: @clrScrollbarHover;
+			}
+		}
+	}
+
+	&.dragging {
+		.scrollbar-handle {
+			background: @clrScrollbarActive;
+		}
 	}
 }
