--- a/Arc-Dark/styles/sidebar.less
+++ b/Arc-Dark/styles/sidebar.less
@@ -269,11 +269,38 @@
 //------------------------------------------------------------
 .account-sidebar .scrollbar-track {
 	background: @clrSidebarBg;
-	border-left: none;
-	width: 10px;
+	border-left: 1px solid transparent;
+	border-right: none;
+	width: 7px;
+	padding: 1px;
 
 	.scrollbar-handle {
-		background: @clrSidebarScrollbar;
+		background: @clrScrollbarOverlay;
 		border: none;
+		border-radius: 4px;
+	}
+
+	&:hover,
+	&.dragging {
+		border-color: @clrSidebarBorder;
+		width: 13px;
+		padding: 3px;
+
+	}
+
+	&:hover:not(.dragging) {
+		.scrollbar-handle {
+			background: @clrScrollbar;
+
+			&:hover {
+				background: @clrScrollbarHover;
+			}
+		}
+	}
+
+	&.dragging {
+		.scrollbar-handle {
+			background: @clrScrollbarActive;
+		}
 	}
 }
