Arc-Dark: thread list syncing message colors

--- a/Arc-Dark/styles/threadlist.less
+++ b/Arc-Dark/styles/threadlist.less
@@ -99,6 +99,19 @@
 }
 
 //------------------------------------------------------------
+// Syncing message
+//------------------------------------------------------------
+.syncing-list-state {
+	color: @clrListTextFaded;
+
+	a {
+		color: @clrAccent;
+		font-size: 0.9em;
+		cursor: pointer;
+	}
+}
+
+//------------------------------------------------------------
 // Hover action bar
 //------------------------------------------------------------
 .thread-list .list-item:hover .list-column-HoverActions .inner {
