Arc-Dark: style email body unsubscribe link

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -314,6 +314,18 @@
 }
 
 //------------------------------------------------------------
+// Unsubscribe link
+//------------------------------------------------------------
+.unsubscribe-action {
+	color: @clrLink;
+
+	&:hover {
+		cursor: pointer;
+		color: @clrLink;
+	}
+}
+
+//------------------------------------------------------------
 // Quoted text button
 //------------------------------------------------------------
 .quoted-text-control {
