Arc-Dark: email body elements color tweaks

--- a/Arc-Dark/styles/email-frame.less
+++ b/Arc-Dark/styles/email-frame.less
@@ -7,10 +7,24 @@
 	}
 
 	div {
+		background-color: @clrBodyBg !important;
+		color: @clrText !important;
+	}
+
+	td {
+		background-color: @clrBodyBg !important;
+		color: @clrText !important;
+	}
+
+	span {
 		color: @clrText !important;
 	}
 
 	p {
+		color: @clrText !important;
+	}
+
+	h1, h2, h3 {
 		color: @clrText !important;
 	}
 
