--- a/Arc-Dark/styles/email-frame.less
+++ b/Arc-Dark/styles/email-frame.less
@@ -9,6 +9,7 @@
 	div {
 		background-color: @clrBodyBg !important;
 		color: @clrText !important;
+		border-color: @clrTextFadedMore !important;
 	}
 
 	td {
