Arc-Dark: Nautilus-style empty folder bar

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -125,6 +125,15 @@
 @clrButtonDefaultBorderActive: #2e96c0;
 @clrButtonDefaultText: #ffffff;
 
+@clrButtonInfoBg: fade(@clrListTextActive, 0%);
+@clrButtonInfoBorder: fade(@clrListTextActive, 50%);
+@clrButtonInfoBgHover: fade(@clrListTextActive, 20%);
+@clrButtonInfoBorderHover: fade(@clrListTextActive, 80%);
+@clrButtonInfoBgActive: @clrTextActive;
+@clrButtonInfoBorderActive: @clrTextActive;
+@clrButtonInfoText: @clrTextActive;
+@clrButtonInfoTextActive: @clrAccent;
+
 @clrSliderTrackBg: #2d303b;
 @clrSliderButtonBg: #444a58;
 @clrSliderButtonBorder: #262933;
