Arc-Dark: tweak email body table background color

--- a/Arc-Dark/styles/email-frame.less
+++ b/Arc-Dark/styles/email-frame.less
@@ -12,6 +12,10 @@
 		border-color: @clrTextFadedMore !important;
 	}
 
+	table {
+		background-color: @clrBodyBg !important;
+	}
+
 	td {
 		background-color: @clrBodyBg !important;
 		color: @clrText !important;
