--- a/Arc-Dark/styles/sidebar.less
+++ b/Arc-Dark/styles/sidebar.less
@@ -50,20 +50,19 @@
 //------------------------------------------------------------
 .account-switcher {
 	img.content-dark {
-		zoom: 1 !important;
 		background-image: none;
-		background-color: @clrSidebarTextFaded;
+		background-color: @clrSidebarText;
 		-webkit-mask-repeat: no-repeat;
-		-webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="6" viewBox="0 0 10 6"><path fill="#FFF" d="M0 0h1l4 4 4-4h1v1L5 6 0 1z"/></svg>');
-		-webkit-mask-position: 12px 11px;
-		transform: none;
+		-webkit-mask-image: url(../static/images/sidebar/account-switcher-dropdown@2x.png);
+		-webkit-mask-position: 0px 0px;
+		margin-top: 8px;
 	}
 
 	&:hover {
 		cursor: pointer;
 
 		img.content-dark {
-			background-color: @clrSidebarText;
+			background-color: @clrSidebarTextActive;
 		}
 	}
 }
