Arc-Dark: Fix theme selector dialog

--- a/Arc-Dark/styles/theme-selector.less
+++ b/Arc-Dark/styles/theme-selector.less
@@ -5,10 +5,7 @@
 //------------------------------------------------------------
 .modal-container .modal {
 	background: @clrWindowBg !important;
-	border: 1px solid @clrWindowBorder;
 	border-radius: 3px !important;
-	width: 369px !important;
-	height: 420px !important;
 
 	.modal-close {
 		width: 16px !important;
@@ -34,15 +31,19 @@
 .theme-picker {
 	h4 {
 		color: @clrText !important;
-		font-size: 1.2em;
+		font-size: 15.5px;
+		margin-top: -16px;
+		margin-bottom: 0;
 	}
 
 	h4 + div {
 		color: @clrText !important;
-		font-size: 1em !important;
+		font-size: 13px !important;
 	}
 
 	.create-theme {
+		margin-top: 10px;
+
 		a {
 			color: @clrLink !important;
 			text-decoration: underline;
