Arc-Dark: Fox threadlist empty folder bar bottom border

--- a/Arc-Dark/styles/threadlist-toolbar.less
+++ b/Arc-Dark/styles/threadlist-toolbar.less
@@ -160,7 +160,7 @@
 //------------------------------------------------------------
 .thread-list-empty-folder-bar {
 	background-color: @clrAccent;
-	border-bottom-color: @clrAccent;
+	border-bottom-color: @clrWindowBorder;
 	color: @clrTextActive;
 	font-size: 1em;
 
