Arc-Dark: Tweak prefs back button font

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -28,6 +28,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	.item-back-title {
 		margin: 1px 2px 0 3px;
 		font-size: 14px;
+		font-weight: bold;
 		color: @clrToolBtnText;
 	}
 
