--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -60,7 +60,7 @@ input[type='url'] {
 //---------------------------------
 // Button
 //---------------------------------
-.btn {
+.btn, .btn.btn-emphasis {
 	box-shadow: none;
 	background: @clrButtonBg;
 	border: 1px solid @clrButtonBorder;
